changed the gif div area to be a % width and not fixed, fixes white space on right side

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .scrollbar-none {
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -69,4 +74,3 @@ border w-6/12 rounded-full bg-gradient-to-r from-green-500 from-90% to-transpare
   font-weight: bold; /* Equivalent to 'font-bold' in Tailwind */
   padding: 0.25rem; /* Equivalent to 'p-1' in Tailwind, assuming the default Tailwind spacing scale where 1 unit = 0.25rem */
 }
-
